--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
     border: none;
     padding: 15px 30px;
     font-size: 1.1rem;
+    margin-right:12px ;
     text-transform: uppercase;
     border-radius: 50px;
     cursor: pointer;
